src/global.css
@import "tailwindcss";

@plugin "@tailwindcss/typography";

@theme inline {
    --font-serif: var(--font-swiss-works);
    --font-mono: var(--font-berkeley-mono);
}

:root {
    --background: oklch(98% 0 0);
    --dev: oklch(78% 0.348 231.09);
    --beyond: oklch(75% 0.227 32.82);
    --accent: oklch(89% 0.05 135);
    --ink: oklch(25% 0 102.07);
    --muted: var(--color-zinc-500);
    --focus: var(--color-zinc-400);
    --divider: var(--color-zinc-200);
    --error: oklch(52% 0.2 15);
    --success: oklch(48% 0.13 165);
}

@media (prefers-color-scheme: dark) {
    :root {
        color-scheme: dark;
        --background: oklch(16% 0 0);
        --dev: oklch(65% 0.2 210);
        --beyond: oklch(70% 0.22 45);
        --accent: oklch(89% 0.09 135);
        --ink: oklch(90% 0 0);
        --muted: var(--color-zinc-500);
        --focus: var(--color-zinc-600);
        --divider: var(--color-zinc-800);
        --error: oklch(68% 0.2 15);
        --success: oklch(65% 0.13 165);
    }
}

@theme {
    --color-background: var(--background);
    --color-dev: var(--dev);
    --color-beyond: var(--beyond);
    --color-accent: var(--accent);
    --color-muted: var(--muted);
    --color-ink: var(--ink);
    --color-divider: var(--divider);
    --color-focus: var(--focus);
    --color-error: var(--error);
    --color-success: var(--success);
}

/* Inline code styling */
.astro-code,
.astro-code span {
    background-color: var(--background) !important;
}

@media (prefers-color-scheme: dark) {
    .astro-code,
    .astro-code span {
        color: var(--shiki-dark) !important;
        background-color: var(--background) !important;
        font-style: var(--shiki-dark-font-style) !important;
        font-weight: var(--shiki-dark-font-weight) !important;
        text-decoration: var(--shiki-dark-text-decoration) !important;
    }
}

